fix: Adjust dashboard header layout for improved alignment

--- a/src/Pages/dashboard/categorias/Categorias.module.css
+++ b/src/Pages/dashboard/categorias/Categorias.module.css
@@ -9,11 +9,8 @@
 
 .dashboardHeader {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  align-content: stretch;
   margin: 40px;
 }
 
